--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 class="heading">Note App</h1>
+    <h1 class="heading"> Loacal "SESSION" Note App</h1>
     <p class="info-text">Double click on a note to remove it</p>
     <div class="app" id="app">
       <!-- <textarea
@@ -18,7 +18,7 @@
         placeholder="Empty Note"
       ></textarea> -->
 
-      <button class="btn" id="btn">+</button>
+      <button class="btn" id="btn">+ ADD</button>
     </div>
     <script src="index.js"></script>
   </body>
