--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 class="heading"> Loacal "SESSION" Note App</h1>
+    <h1 class="heading">  Note App</h1>
     <p class="info-text">Double click on a note to remove it</p>
     <div class="app" id="app">
       <!-- <textarea
